add history formatter